llvm/test/fail/06dupvar.dna
def main
   var a b a is int
   a := 1
   writeInteger: a
   writeString: "\nthis program is wrong!!!\n"
